--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "http://github.com/adrianmarino/example-app"
+        "url": "https://github.com/adrianmarino/jssample"
     },
     "description": "An example nodejs application",
     "dependencies": {
